...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.516"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvAlbumTitle" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvTracks"
                android:layout_width="377dp"
                android:layout_height="366dp"
                android:layout_marginTop="12dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.47"
...
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvAlbumDescription" />

            <Button
                android:id="@+id/btnAddTrack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="220dp"
                android:layout_marginTop="16dp"
                android:text="@string/addTrackToAlbum"
                android:textSize="12sp"
...
